[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/fonts/Minimum.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/scroll.gdshader" type="Shader" id=3]
[ext_resource path="res://scenes/flowershop/ui/stats/honey_drop.png" type="Texture" id=4]
[ext_resource path="res://scenes/flowershop/ui/controls/tiled_bg.png" type="Texture" id=5]
[ext_resource path="res://scenes/flowershop/ui/icons/back.png" type="Texture" id=6]
[ext_resource path="res://scenes/unlockshop/UnlockShop.gd" type="Script" id=7]
[ext_resource path="res://scenes/unlockshop/panel.png" type="Texture" id=8]
[ext_resource path="res://scenes/flowershop/ui/button/SimpleButton.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/speed_x = 0.0
shader_param/speed_y = -0.3

[sub_resource type="DynamicFont" id=6]
extra_spacing_bottom = -2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
extra_spacing_bottom = -2
font_data = ExtResource( 2 )

[node name="UnlockShop" type="Control" groups=["scene"]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( -50, -53 )
texture = ExtResource( 8 )
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 30.0
margin_right = 160.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( -50, -68 )
color = Color( 0.92549, 0.917647, 0.921569, 1 )

[node name="HoneyCounter" type="PanelContainer" parent="."]
margin_left = 105.0
margin_top = 3.0
margin_right = 152.0
margin_bottom = 27.0
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="HoneyCounter"]
margin_left = 3.0
margin_top = 4.0
margin_right = 43.0
margin_bottom = 20.0

[node name="Icon" type="TextureRect" parent="HoneyCounter/HBoxContainer"]
margin_right = 12.0
margin_bottom = 16.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="HoneyCounter" type="Label" parent="HoneyCounter/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.0588235, 0.0352941, 0.0352941, 1 )
margin_left = 16.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 13.0
rect_min_size = Vector2( 24, 0 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -114.0
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 76.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 4.0
margin_right = 156.0
margin_bottom = 76.0
mouse_filter = 1
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Unlockables" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 152.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 160.0
margin_bottom = 114.0
custom_constants/margin_right = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 2.0
margin_right = 158.0
margin_bottom = 32.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3

[node name="ItemDescription" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
margin_left = 3.0
margin_top = 4.0
margin_right = 112.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 136, -87 )
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
text = "Sometimes the Fox will want to play Plinko with you"
autowrap = true
clip_text = true

[node name="BuyButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 120.0
margin_right = 156.0
margin_bottom = 32.0
focus_mode = 0
size_flags_vertical = 3
text = "Buy"

[node name="Back" parent="." instance=ExtResource( 9 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 19.0
margin_bottom = 19.0
toggle_mode = false

[node name="icon_off" parent="Back" index="0"]
texture = ExtResource( 6 )

[node name="icon_on" parent="Back" index="1"]
texture = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[editable path="Back"]
